Bug fixes in the displaying of new runs

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,9 +486,9 @@
     "                if(value == \"\"):\n",
     "                    value = \"XX\"\n",
     "                \n",
-    "                if(isinstance(value, float)):\n",
-    "                    if(value.is_integer()):\n",
-    "                        value = str(int(value)).zfill(3)\n",
+    "                split_val = str(value).split(\".\")\n",
+    "                if(split_val[-1] == \"0\" and split_val[0].isdigit()):\n",
+    "                    value = str(int(value)).zfill(3)\n",
     "\n",
     "                if not firstVal:\n",
     "                    labelVal += \"_\"\n",
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a372323a7814340a56a6cc2d1916747",
+       "model_id": "c946b6354e374dcbb1b5af51a9b87c80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -746,7 +746,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98f28e376bef44d7826079ba33bdfe2a",
+       "model_id": "2073d72f8e044fb89eaa54ab0727f688",
        "version_major": 2,
        "version_minor": 0
       },
@@ -760,7 +760,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8de76db53064381ab48c5f31fb23a4d",
+       "model_id": "2c7f581954e34e49aaba92dae74a0d56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -774,7 +774,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc34042ac4d9460aaf1676eb16705c43",
+       "model_id": "a9b46b20c7174a5fa67095600410d976",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +788,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9553bf4424941789a8b2f997f29c965",
+       "model_id": "1b58baed448d422ebde413cdfbe917aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -802,7 +802,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35ba3de1238f4859873a8ae5d3ec1606",
+       "model_id": "fa43c5ab22fc4b89a76f1aad304d8ab1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -816,7 +816,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6c1ccbf77344e8a808e7f8d21c67dcb",
+       "model_id": "28749ca5321a4c7c998ca5f856d91ef2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -830,7 +830,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fea5a18372ee43c4acd2a2e35c3577e9",
+       "model_id": "b882f6df5dbd4dc4af84615701c6e550",
        "version_major": 2,
        "version_minor": 0
       },
@@ -844,7 +844,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e20a3f04727f46189873b4633b12e257",
+       "model_id": "78bc90a2e319459c886cea4ea51a8818",
        "version_major": 2,
        "version_minor": 0
       },
@@ -904,7 +904,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1941a6aa2f6f4af6ab0a132e60c6fceb",
+       "model_id": "515aaf9ff6134ae287895b19f2d1042c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -918,7 +918,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "337c7e4037ff4ef6ae7505f2ad5428af",
+       "model_id": "5fba2d242ff94804856df16a4d400488",
        "version_major": 2,
        "version_minor": 0
       },
@@ -932,7 +932,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e38d294aef64f63b287dc4229b3a60f",
+       "model_id": "a0a4f829fd0447249f82f81da13fbcf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -946,7 +946,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4e39e191d9c4c29bb65d74ec1e48294",
+       "model_id": "b00bea70841d43d4ad7e095a1c84c51a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -960,7 +960,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c20ebc8916ef4b1d85424aeaf22f1d53",
+       "model_id": "631385ab34eb4a329db9c3fdb3be27c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -974,7 +974,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "670e5c2bfe134fb4b0754e15ec6aa0e1",
+       "model_id": "31d565aa55f14979b9839c3604ea6282",
        "version_major": 2,
        "version_minor": 0
       },
@@ -988,7 +988,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44db0976c00e4270aef3780e77acfe29",
+       "model_id": "9d9948dcc1934e4a9992245e1a7b6aba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1002,7 +1002,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "051fe644020145dc8b54b2f175c34d90",
+       "model_id": "d57b7455364a4babbc4397c6a5ab6a2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1016,7 +1016,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82f77ee2e590434c9f84e1b42c80fced",
+       "model_id": "98a6b662880941c3a48dd3fdc292313a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1030,7 +1030,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8a0eeaa60a14da6b9812ff8f0ab1b0f",
+       "model_id": "47f658dc619e4e5eb0192df33b63b85a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1044,7 +1044,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c5fb34eb763404a92528177e2058dea",
+       "model_id": "65ded7cdabb24debb77dc7c91878a715",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1104,7 +1104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6f205749bcf4541ba01276f988be0f7",
+       "model_id": "5535bd7b348544569c94c0d13e9c8189",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1118,7 +1118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36b390e8a2234371a1fd422aa9cb2d15",
+       "model_id": "8daef78805aa4b3ba53a5ba251890e7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1132,7 +1132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8a1fb3470c54c399eb5f68f5d82ef2c",
+       "model_id": "fe95dc397a2146bdae31625f99fd1cc7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1192,7 +1192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0b93191ffe74687a0b053ddbbb8be2c",
+       "model_id": "ef031168ca4346a097a0ab4bafd73f3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1206,7 +1206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbf5e84c54e34b3ca2fbb483836ef936",
+       "model_id": "dd1d6bf2aacc4ecaa588d581b6c259e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1220,7 +1220,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2953ce95b87c47ac81b4c58a3adf73be",
+       "model_id": "7ba1a04c70c34c10ada2e47cf358d576",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1252,6 +1252,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int\n"
+     ]
     },
     {
      "data": {
@@ -1292,7 +1299,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "809bc9555f964eed9fb46971842c3526",
+       "model_id": "c482e9e5e4094089b239e1da7c612aa0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1306,7 +1313,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb9fb21083f742fb966de77541e1dc55",
+       "model_id": "c5b6936647ac49e69ad2b085156b5fae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1320,7 +1327,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be8c8b55ff0f4168be3d918cee7c3bfd",
+       "model_id": "bc2435cdd21c4bf28a7b40ffaaabeba8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1334,7 +1341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1cbc00e2f59422386b3b613d6ba1fe4",
+       "model_id": "59e2e2808d1346fcb6b23421e5301ca8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1348,7 +1355,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b11023a726c24350b8667eae23b1aa4b",
+       "model_id": "15632444440f4b41bcbfd4e0e8a9ddf7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1362,7 +1369,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c0e6ac4b807465d831c836fd0b15cbb",
+       "model_id": "8da3b92262c741b58e02f8af35389e1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1376,7 +1383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b7764a3a5e5444e810e78e0c287c02a",
+       "model_id": "493b2cf67d9747da88edeb980975b879",
        "version_major": 2,
        "version_minor": 0
       },
