--- a/ipyrun/_runconfig.ipynb
+++ b/ipyrun/_runconfig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -319,8 +319,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
+    "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 2
    },
    "outputs": [
@@ -330,16 +331,21 @@
      "text": [
       "{'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun',\n",
       " 'fdir_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config',\n",
-      " 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\test',\n",
+      " 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs',\n",
       " 'fdir_inputs_archive': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive',\n",
       " 'fdir_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log',\n",
       " 'fdir_outputs': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\external'],\n",
       " 'fnm_config': 'config-eplus_pipework_params.json',\n",
       " 'fnm_log': 'log-eplus_pipework_params.csv',\n",
       " 'fpth_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config\\\\config-eplus_pipework_params.json',\n",
-      " 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\test\\\\blah.csv',\n",
-      " 'fpth_inputs_options': {'project': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\test',\n",
-      "                                     'fpths': []},\n",
+      " 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
+      " 'fpth_inputs_options': {'project': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs',\n",
+      "                                     'fpths': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params-1.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625-inputs-eplus_pipework_params.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625inputs-eplus_pipework_params.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200607_1420-jg-inputs-eplus_pipework_params.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200611_1021-jg-inputs-eplus_pipework_params.csv']},\n",
       "                         'template': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\template_inputs',\n",
       "                                      'fpths': ['C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\template_inputs\\\\inputs-eplus_pipework_params.csv']}},\n",
       " 'fpth_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log\\\\log-eplus_pipework_params.csv',\n",
@@ -370,9 +376,15 @@
     "        }\n",
     "    from pprint import pprint\n",
     "    rc = RunConfig(config)\n",
-    "    pprint(rc.config)\n",
-    "\n"
+    "    pprint(rc.config)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
