Bug fixes and Tags to ModelRun templating

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
     "    def _update_change(self, change):\n",
     "        value = None\n",
     "        if(self.widget_name == \"DatePicker\"):\n",
-    "            value = self.widget_only.value.strftime('%d/%m/%Y')\n",
+    "            value = self.widget_only.value.strftime('%Y%m%d')\n",
     "        else:\n",
     "            value = self.widget_only.value\n",
     "\n",
@@ -208,7 +208,7 @@
     "        elif self.widget_name == 'ipysheet':\n",
     "            self._ipysheet()\n",
     "        elif self.widget_name == \"DatePicker\":\n",
-    "            value = datetime.strptime(self.kwargs['value'], '%d/%m/%Y')\n",
+    "            value = datetime.strptime(self.kwargs['value'], '%Y%m%d')\n",
     "            self.widget_only = self.widget_lkup[self.widget_name](value=value)\n",
     "        elif self.widget_name == \"DerivedText\":   \n",
     "            self.widget_only = self.widget_lkup[self.widget_name](**self.kwargs)\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11bca9d1eff4459dbd0f5afeaacfee81",
+       "model_id": "f4dc92b6758646b19d207733c51e7658",
        "version_major": 2,
        "version_minor": 0
       },
@@ -837,7 +837,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a8c93da14b1487eb714fb273a117064",
+       "model_id": "a465cf9c5143467abcaf0467a8afc675",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,7 +851,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f120067543041609771c0b6c2ef3571",
+       "model_id": "ff9684b635eb46b0ac84d668c0b89b44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -865,7 +865,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "989afa7e716841d095fbb04103d0f9f3",
+       "model_id": "a32acd66bfa942099cda67a176deced2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -879,7 +879,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8c422165c5b4a09b733235627218d51",
+       "model_id": "90c8fe0eb35f4c6fa58070866232b6ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -893,7 +893,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fc28051537544e6b75394a50521ce60",
+       "model_id": "af0b23d42fab4ee195cfe1ebbb5c042c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -907,7 +907,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4691bbf7b8142bb87bfd0f98041142f",
+       "model_id": "0b65838e64d8425f9b0e18aabbae7bf9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -921,7 +921,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f661b969a36a440a99c988634a6db5ad",
+       "model_id": "f514d49902fc4517b8b2ac45aefd13d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -935,7 +935,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e0f55e006a043f7904e499a6e1759e5",
+       "model_id": "d144e0bfda36416889ce3cb2a3d6d88e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -995,7 +995,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "384261a080214b3b99a83129bb91ead4",
+       "model_id": "5f984c7c52e04882939d9f8cfc17809f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1009,7 +1009,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba36314dc4d44f3aaabc05dd4b117735",
+       "model_id": "d518fb5dadaf44368cf9ff04c3d54b72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1023,7 +1023,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46e32d8179054f899724cb71bb076fbc",
+       "model_id": "47d8a8fd2dc641dc9bdaff02f4f65525",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1037,7 +1037,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67f9c1b4ecf6413e9e8df129d0f3bcaf",
+       "model_id": "21a0a60e133d4cd88dbe591c3b9c9da3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1051,7 +1051,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e17c38db88f54b2ca4fcf207c08a2e10",
+       "model_id": "ca6be03c83f34fee9633abb4c7c59d7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1065,7 +1065,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "740fb0c40bc34340a2ab6878c98110fd",
+       "model_id": "df477aaec6b94b44a2b674cdde05cd04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1079,7 +1079,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbf4f13db47c4975affddf8da9d756c9",
+       "model_id": "3d54d2e3a9fb4791a23e6ad062107898",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1093,7 +1093,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84fcd525beda441d82470836324812c6",
+       "model_id": "4e2082ced2d14044a60682794e3027fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1107,7 +1107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "065d84d5b84d4c06be4d89a58f95c999",
+       "model_id": "5312aa3c684842c38e135ce3ae9a57b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1121,7 +1121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46d7fb53b1654753bebb37fd432605fc",
+       "model_id": "537aa4f118f442f5a15122014f3435c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1135,7 +1135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a990391fd57147788917a3d0973582f6",
+       "model_id": "12f5fef1a5e648048a982993340f8155",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1195,7 +1195,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62f35444d8584153961770e417d22266",
+       "model_id": "5b21ac0c0dbc4ec18f4ecca7128bf2c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1209,7 +1209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e6311869771493780668fbe6b0108a9",
+       "model_id": "305154b1092e4c35a62bb10822928356",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1223,7 +1223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98955df63a704c41891a0871bce0ec21",
+       "model_id": "04eb3d93450a4f30971f8230b1f8cf69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1283,7 +1283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "077a58d488df42e985aaa84ef2ac5a09",
+       "model_id": "bab68675fadc4b028fb4f2029cc58f49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1297,7 +1297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c0bbc6521514e68a32b07bda6495804",
+       "model_id": "56c7f715273c42f4a164d7531be19b71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1311,7 +1311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb7fa08040254f4da29cc68364633b8d",
+       "model_id": "3949673e29e84f24b68dab91547488e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1383,7 +1383,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "414a1db7d73d4cf49dcd350c2792a026",
+       "model_id": "205d87fac25b45c099369eed56424040",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1397,7 +1397,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d25704724ba74feaa33a106e38c4179f",
+       "model_id": "e711558fa5884555933d7d0a0f249a44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1411,7 +1411,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d54f8c54f55946f7b9337c5639d56cba",
+       "model_id": "2529f7af828c4756a22d8e981eb0436a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1425,7 +1425,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8540ee9ca0c41d3a2450b9f663308f1",
+       "model_id": "9418de9ba6d74e538cde54fada14db85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1439,7 +1439,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30c6992e519345aeb9782b2cf574eb30",
+       "model_id": "fbc66a282b8d407d93a5b4da1cf2fd11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1453,7 +1453,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c72f11ba59fa40ffbf99b0d5686a4ebd",
+       "model_id": "4eb73e5999e94650ae6f408bce7ad39e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1467,7 +1467,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9635406eb4044619ee402f5914a3ecd",
+       "model_id": "ecab55d993fa4be4a0ee3114085720c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1527,7 +1527,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eff07efd77eb48c79540f4142f9060e9",
+       "model_id": "2c4a251b9a914586abb514668e014cfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1541,7 +1541,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d294c96338db4025b2fdcabfd60ce8ab",
+       "model_id": "02ab8757a7cd4486b92482db81e3d0d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1555,7 +1555,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e948356531f42d7896ec957dd8fe1b2",
+       "model_id": "3a427acb1b1246d0ae166559ce548af8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1615,7 +1615,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebc7e68a23c54bafa82a766566a9979b",
+       "model_id": "6a3d9689b3464595be359ec0892d7c69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1629,7 +1629,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42fde80aa5ed47bba5e845184c7828ab",
+       "model_id": "3fcd432338fc4cb686b836bea047ee95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1764,6 +1764,13 @@
     "    display(Markdown('---'))  \n",
     "    display(Markdown('')) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
