--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -628,12 +628,12 @@
     "        self.applayout = widgets.VBox(out)\n",
     "        display(self.applayout)\n",
     "        for l in self.li:\n",
-    "            display(l.out)\n"
+    "            display(l.out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -666,7 +666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c58eac571f16437d8e5b3b60e87d91d1",
+       "model_id": "dc1c0f6fffe844e0a13e42523adbe7cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -680,7 +680,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "552199efca95414e8d0a0e3e489949a1",
+       "model_id": "1e93be56b9b14d6f8d89132863eb9371",
        "version_major": 2,
        "version_minor": 0
       },
@@ -749,7 +749,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eb6956a4f4c46619e2804a784de5c0c",
+       "model_id": "cc624b36e8b348f0947a2c29a92db4e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -763,7 +763,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd6ec96dc24242119141f342f0852635",
+       "model_id": "c3a69e5457434156ae3e8e946fc0e470",
        "version_major": 2,
        "version_minor": 0
       },
@@ -853,7 +853,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c956ecbff78e4905be18982dcc40d391",
+       "model_id": "7653e674c91f4433bffe09669fbfa6db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -867,7 +867,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35152d9fdb9a4494a13500979b835fd2",
+       "model_id": "01923475a406405daaf03891adbb5c9d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -881,7 +881,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9636edfe819c47fd84afee2ad2a0b28a",
+       "model_id": "e999edc7ee794b34a91163efd807ed4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -895,7 +895,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25dc0ac86b9443b8a880bc32031071a0",
+       "model_id": "d4002886b09746888fdf4a8cdaecbca5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -909,7 +909,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a63a8754a1f14ad0bb5c8dd973e6edd7",
+       "model_id": "624d0d41a6704b20b11fa63a68f4e5ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -923,7 +923,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a33c8c3b26d2412899b60935217ce9b4",
+       "model_id": "095181eb89784b6890a7ab87534bea84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -937,7 +937,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "094c68a2cb0c4ef88c3ac163ef1772b8",
+       "model_id": "589e2f7e49ff4fe79ba98793d90154ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -951,7 +951,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e59e5db076c42be91a61209e9eaa3b3",
+       "model_id": "197671453d094aa1af381bd5cc91d65d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1040,7 +1040,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd9c1acf429f4897b9b5f388304c0bab",
+       "model_id": "135f22bb49834eb9b6d622c73856436f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1054,7 +1054,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4551992f204940a3b9c1819dd565a973",
+       "model_id": "2d66522aaaaa4269ad83161eaabd7b06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1068,7 +1068,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cab450ed3d147a8a4c2188d0f13f961",
+       "model_id": "2946c611693743f0a692f7e218c1920b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1102,15 +1102,70 @@
      "output_type": "display_data"
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\modelruninputs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-c9b5bd5a8e36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    214\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mbatch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    215\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 216\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfdir_modelruninput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    217\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\".json\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    218\u001b[0m             \u001b[0mbatch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0madd_to_batch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfdir_modelruninput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\modelruninputs'"
-     ]
+     "data": {
+      "text/markdown": [
+       "### Example5"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Batch Run of RunApps, for ModelRun"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "afc8ca0757af412ba25d4eafd917c185",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(icon='eye-slash', layout=Layout(width='5%'), style=ButtonStyle(font_weight='bold'), tool…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19a758bee524406190c1782511f5b53c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa8efd6eda574eca8e7552c77f07cab3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1329,6 +1384,9 @@
     "        batch.append({'app':RunAppModelRun,'config':tmp})\n",
     "        return batch\n",
     "    \n",
+    "    if not os.path.exists(fdir_modelruninput):\n",
+    "        os.makedirs(fdir_modelruninput)\n",
+    "    \n",
     "    for filename in os.listdir(fdir_modelruninput):\n",
     "        if filename.endswith(\".json\"):\n",
     "            batch = add_to_batch(os.path.splitext(filename)[0], fdir_modelruninput, di, batch)\n",
@@ -1348,8 +1406,32 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
